--- a/compilador/Properties/launchSettings.json
+++ b/compilador/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7186;http://localhost:5258",
+      "applicationUrl": "https://localhost:7186;https://localhost:5258",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
